<resources>
    <!-- showMessage -->
    <string name="error_Title">Title is not valid</string>
    <string name="error_Description">Description is not valid</string>
    <string name="error_Link">Link is not valid</string>
    <string name="inserted">Element inserted</string>
    <string name="updated">Element updated</string>
    <string name="deleted">Element deleted</string>
    <string name="addError">This element could not be added</string>
    <string name="updateError">This element could not be updated</string>
    <string name="deleteError">This element could not be deleted</string>

    <string name="app_name">CondominApp</string>
    <string name="activity_login_txtTitle">CONDOMINAPP</string>
    <string name="contentDescription">cnt</string>
    <string name="activity_login_txtWelcome">Welcome</string>
    <string name="activity_login_txtInfo">Use the code given by the admin</string>
    <string name="activity_login_edtKey">Access key</string>
    <string name="activity_login_btnJoin">Login</string>
    <string name="activity_login_chbRemember">Remember the access key</string>
    <string name="activity_login_chbStay">Keep session logged</string>
    <string name="btnHomeIncidents">Incidents</string>
    <string name="btnHomeDiary">Diary</string>
    <string name="btnHomeBoard">Board</string>
    <string name="btnHomeCBoard">Community board</string>
    <string name="btnHomeDocuments">Documents</string>
    <string name="btnHomeMeetings">Meetings</string>
    <string name="btnHomeInformation">Information</string>
    <string name="btnHomeUsers">Users</string>
    <string name="btnHomeCommunities">Communities</string>
    <string name="about_txtTitle">Javier Medinilla</string>
    <string name="about_txtDescription">CondominApp creator</string>
    <string name="about_txtGit">JMedinilla/CondominApp</string>
    <string name="btnHomeProfile">Profile</string>
    <string name="fragFormIncident_title">Incident title</string>
    <string name="fragFormIncident_description">Incident description</string>
    <string name="fragFormDocument_link">Document link</string>
    <string name="fragFormDocument_description">Document description</string>
    <string name="fragFormDocument_title">Document title</string>
    <string name="fragFormDiary_description">Note description</string>
    <string name="fragFormDiary_title">Note title</string>
    <string name="fragFormCBoard_title">Entry title</string>
    <string name="fragFormCBoard_description">Entry description</string>
    <string name="fragFormBoard_title">Entry title</string>
    <string name="fragFormBoard_description">Entry description</string>
    <string name="menuMeetings_date">Order by date</string>
    <string name="menuIncidents_date">Order by date</string>
    <string name="menuIncidents_title">Order by title</string>
    <string name="menuIncidents_author">Order by author</string>
    <string name="menuDocuments_title">Order by title</string>
    <string name="menuDiary_title">Order by title</string>
    <string name="menuDiary_date">Order by date</string>
    <string name="menuCBoard_date">Order by date</string>
    <string name="menuCBoard_title">Order by title</string>
    <string name="menuBoard_date">Order by date</string>
    <string name="menuBoard_title">Order by title</string>
    <string name="action_home_settings">Settings</string>
    <string name="action_home_about">About</string>
    <string name="rememberaccesskey_title">Remember key</string>
    <string name="rememberaccesskey_description">Remember the access key in the login</string>
    <string name="keepuserconnected_title">Stay logged</string>
    <string name="keepuserconnected_description">Stay logged after closing the application</string>
    <string name="accesskey_title">Key</string>
    <string name="accesskey_description">User access key</string>
    <string name="navIncidents">Incidents</string>
    <string name="navDiary">Diary</string>
    <string name="navBoard">Main board</string>
    <string name="navCBoard">Community board</string>
    <string name="navDocuments">Documents</string>
    <string name="navMeetings">Meetings</string>
    <string name="navInformation">Information</string>
    <string name="navProfile">Profile</string>
    <string name="navUsers">Community users</string>
    <string name="navCommunities">Communities</string>
    <string name="twoNavOption">Extras</string>
    <string name="twoNavShop">Shopping cart</string>
    <string name="twoNavGame">Games</string>
    <string name="threeNavOption">Settings</string>
    <string name="threeNavSettings">Settings</string>
    <string name="threeNavHelp">Help</string>
    <string name="fourNavOption">Other</string>
    <string name="fourNavAbout">About</string>
    <string name="back_pressed_twice">Press back again to exit</string>
    <string name="navHome">Home menu</string>
    <string name="menuContext_update">Update</string>
    <string name="menuContext_delete">Delete</string>
    <string name="detail_incident_description_default">Description:</string>
    <string name="detail_incident_title_default">Title:</string>
    <string name="detail_incident_date_default">Date:</string>
    <string name="detail_incident_user_default">Author:</string>
    <string name="detail_incident_id_default">ID:</string>
    <string name="detail_delete">Delete</string>
    <string name="detail_edit">Edit</string>
    <string name="detail_close">Close</string>
    <string name="detail_document_btnOnline">See online</string>
    <string name="detail_document_btnDownload">Download</string>
    <string name="no_user">The user does not exist</string>
    <string name="fragment_qr_txtFlash">Activate flash</string>
    <string name="receiver_incident_insert">There is a new incident</string>
    <string name="receiver_incident_update">An incident has been updated</string>
    <string name="receiver_incident_delete">An incident has been deleted</string>
    <string name="receiver_document_insert">There is a new document</string>
    <string name="receiver_document_update">A document has been updated</string>
    <string name="receiver_document_delete">A document has been deleted</string>
    <string name="receiver_insert">New element</string>
    <string name="receiver_update">Updated element</string>
    <string name="receiver_delete">Deleted element</string>
</resources>
