<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/about_imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/contentDescription"
        android:src="@mipmap/ic_jvmedinilla" />

    <TextView
        android:id="@+id/about_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/about_txtTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/about_txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/about_txtDescription"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/about_linearGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_txtDescription"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/about_imgGit"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/github_circle" />

        <TextView
            android:id="@+id/about_txtGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_txtGit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>