<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/detail_document_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/detail_document_description_default_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/ic_clipboard_text_grey600_24dp" />

                <TextView
                    android:id="@+id/detail_document_description_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@id/detail_document_description_default_image"
                    android:layout_toRightOf="@id/detail_document_description_default_image"
                    android:text="@string/detail_incident_description_default"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_document_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_document_description_default"
                    android:layout_margin="2dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_document_layout"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/detail_document_btnOnline"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/cloud"
                    android:text="@string/detail_document_btnOnline" />

                <Button
                    android:id="@+id/detail_document_btnDownload"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/cloud_download"
                    android:text="@string/detail_document_btnDownload" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</ScrollView>