<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="20dp"
    tools:context="com.jmed.condominapp.Activity_Login">

    <android.support.v7.widget.CardView
        android:id="@+id/activity_login_cardGroupWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/activity_login_txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/activity_login_txtTitle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/activity_login_imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/activity_login_txtTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/contentDescription"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/activity_login_txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_login_imgLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/activity_login_txtWelcome"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/activity_login_txtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_login_txtWelcome"
                android:layout_centerHorizontal="true"
                android:text="@string/activity_login_txtInfo"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_login_cardGroupLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_login_cardGroupWelcome"
        android:layout_alignLeft="@id/activity_login_cardGroupWelcome"
        android:layout_alignRight="@id/activity_login_cardGroupWelcome"
        android:layout_alignStart="@id/activity_login_cardGroupWelcome"
        android:layout_below="@id/activity_login_cardGroupWelcome"
        android:layout_marginTop="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/activity_login_btnScan"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_alignBottom="@+id/activity_login_edtKey"
                android:layout_alignTop="@+id/activity_login_edtKey"
                android:contentDescription="@string/contentDescription"
                android:onClick="getOnClickLoginMain"
                android:src="@drawable/qrcode_scan" />

            <EditText
                android:id="@+id/activity_login_edtKey"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/activity_login_btnScan"
                android:layout_toRightOf="@+id/activity_login_btnScan"
                android:ems="10"
                android:hint="@string/activity_login_edtKey"
                android:inputType="text"
                android:labelFor="@+id/login_main_edtKey"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent" />

            <ImageView
                android:id="@+id/activity_login_btnJoin"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_alignBottom="@+id/activity_login_edtKey"
                android:layout_alignTop="@+id/activity_login_edtKey"
                android:layout_toEndOf="@+id/activity_login_edtKey"
                android:layout_toRightOf="@+id/activity_login_edtKey"
                android:contentDescription="@string/contentDescription"
                android:onClick="getOnClickLoginMain"
                android:src="@drawable/login" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_login_cardGroupBoxes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_login_cardGroupLogin"
        android:layout_alignLeft="@id/activity_login_cardGroupLogin"
        android:layout_alignRight="@id/activity_login_cardGroupLogin"
        android:layout_alignStart="@id/activity_login_cardGroupLogin"
        android:layout_below="@+id/activity_login_cardGroupLogin"
        android:layout_marginTop="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <CheckBox
                android:id="@+id/activity_login_chbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_chbRemember"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/activity_login_chbStay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_login_chbRemember"
                android:enabled="false"
                android:text="@string/activity_login_chbStay"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
