<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/fragFormIncident_cardImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/fragFormIncident_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/image" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fragFormIncident_cardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragFormIncident_cardImg"
        android:layout_margin="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <EditText
                android:id="@+id/fragFormIncident_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/fragFormIncident_title"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:minLines="2"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/fragFormIncident_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragFormIncident_title"
                android:layout_marginTop="8dp"
                android:gravity="start|top"
                android:hint="@string/fragFormIncident_description"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="6"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragFormIncident_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_checkbox_marked_circle_outline_white_36dp" />
</RelativeLayout>