<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/detail_entry_user_default_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_emoticon_happy_grey600_24dp" />

            <TextView
                android:id="@+id/detail_entry_user_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_toEndOf="@+id/detail_entry_user_default_image"
                android:layout_toRightOf="@id/detail_entry_user_default_image"
                android:text="@string/detail_incident_user_default"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_entry_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_entry_user_default"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/detail_entry_date_default_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_entry_user"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_calendar_grey600_24dp" />

            <TextView
                android:id="@+id/detail_entry_date_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/detail_entry_date_default_image"
                android:layout_margin="2dp"
                android:layout_toEndOf="@+id/detail_entry_date_default_image"
                android:layout_toRightOf="@id/detail_entry_date_default_image"
                android:text="@string/detail_incident_date_default"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_entry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_entry_date_default"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/detail_entry_description_default_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_entry_date"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_clipboard_text_grey600_24dp" />

            <TextView
                android:id="@+id/detail_entry_description_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/detail_entry_description_default_image"
                android:layout_margin="2dp"
                android:layout_toEndOf="@+id/detail_entry_description_default_image"
                android:layout_toRightOf="@id/detail_entry_description_default_image"
                android:text="@string/detail_incident_description_default"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_entry_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_entry_description_default"
                android:layout_margin="2dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</ScrollView>